--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
       fail-fast: false    
       matrix:    
         go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0]    
-        flag: [A, B, C, D, E, F, G, H, I, J ,K, L, M, N, O, P, Q, R, S, T, U, P, W, X, Y, Z, Z1, Z2, Z3, Z4, Z5, Z6, Z7, Z8, Z9, Z90]    
+        flag: [A, B, C, D, E, F, G, H, I, J ,K, L, M, N, O, P, Q, R, S, T, U, P, W, X, Y, Z]    
     env:    
         NUM_JOBS: 200    
         JOB: ${{ matrix.go }}    
